--- a/1_split.ipynb
+++ b/1_split.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import split_folders as sf"
+    "import splitfolders as sf"
    ]
   },
   {
